test/errors/errors10.todo
*/ task (rec in 2d).

#*/ task (rec every 2d). 1 2020-04-25
